crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__f401_use_top_member_before_second_import.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `a.b` imported but unused
 --> f401_preview_submodule.py:4:8
  |
2 | import a
3 | a.foo()
4 | import a.b
  |        ^^^
  |
help: Remove unused import: `a.b`
1 | 
2 | import a
3 | a.foo()
  - import a.b
