crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__f821_frozendict_pre_py315_undefined.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `frozendict`. Consider specifying `requires-python = ">= 3.15"` or `tool.ruff.target-version = "py315"` in your `pyproject.toml` file.
 --> <filename>:1:1
  |
1 | frozendict
  | ^^^^^^^^^^
